--- a/media/index.html
+++ b/media/index.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-<a href="mux.html?spec=s5-p15">5 second Startup</a> - 
-<a href="mux.html?spec=p5-r9-p30">Rebuffering mid-stream</a> - 
-<a href="mux.html?spec=p15-e404">In-stream 404 error</a>
-<a href="mux.html?spec=p15-r-e">End-of-stream rebuffering</a>
+<a href="index.html?spec=s5-p15">5 second Startup</a> - 
+<a href="index.html?spec=p5-r9-p30">Rebuffering mid-stream</a> - 
+<a href="index.html?spec=p15-e404">In-stream 404 error</a>
+<a href="index.html?spec=p15-r-e">End-of-stream rebuffering</a>
 <br><br>
 <video id="myVideo" controls width="960" height="540" ></video>
 
