Small text change

--- a/media/index.html
+++ b/media/index.html
@@ -6,6 +6,7 @@
   <title>Video Replay</title>
   <style type="text/css">
     body {background-color: #000000}
+    p {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Arial; color: #ffffff}
     a {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Arial; color: #ffffff}
   </style>
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
@@ -13,6 +14,7 @@
 </head>
 
 <body>
+<p>Examples</p>
 <a href="index.html?spec=s5-p15">5 second Startup</a> - 
 <a href="index.html?spec=p5-r9-p30">Rebuffering mid-stream</a> - 
 <a href="index.html?spec=p15-e404">In-stream 404 error</a>
