Fix last change

--- a/media/index.html
+++ b/media/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-<p>Examples</p>
+<p>Examples:</p>
 <a href="index.html?spec=s5-p15">5 second Startup</a> - 
 <a href="index.html?spec=p5-r9-p30">Rebuffering mid-stream</a> - 
 <a href="index.html?spec=p15-e404">In-stream 404 error</a>
